unpackaged/main/default/objects/Entrada_Lista_Precios__c/Entrada_Lista_Precios__c.object-meta.xml
<CustomObject>
    <label>Entrada Lista Precios</label>
    <nameField>
        <displayFormat>ELP-{00000000}</displayFormat>
        <label>Nombre de Entrada Lista Precios</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entradas Listas Precios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>