unpackaged/main/default/objects/Entrada_Lista_Precios__c/fields/Lista_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_precios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Entradas Listas Precios</relationshipLabel>
    <relationshipName>Entradas_Listas_Precios</relationshipName>
    <type>Lookup</type>
</CustomField>