unpackaged/main/default/objects/Entrada_Lista_Precios__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Entradas Listas Precios</relationshipLabel>
    <relationshipName>Entradas_Listas_Precios</relationshipName>
    <type>Lookup</type>
</CustomField>