unpackaged/main/default/objects/Entrada_Lista_Precios__c/fields/Relacion_Producto_Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Relacion_Producto_Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relación Producto Fraccionamiento</label>
    <referenceTo>Relacion_Producto_Fraccionamiento__c</referenceTo>
    <relationshipLabel>Entradas Listas Precios</relationshipLabel>
    <relationshipName>Entradas_Listas_Precios</relationshipName>
    <type>Lookup</type>
</CustomField>