unpackaged/main/default/objects/Entrada_Lista_Precios__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Producto__c</columns>
    <columns>Relacion_Producto_Fraccionamiento__c</columns>
    <columns>Lista_de_precios__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>